@@ -1,4 +1,4 @@
-/* $Id: cmd.c,v 1.7 2007-10-04 09:30:53 nicm Exp $ */
+/* $Id: cmd.c,v 1.8 2007-10-04 10:11:32 nicm Exp $ */
 
 /*
  * Copyright (c) 2007 Nicholas Marriott <nicm@users.sourceforge.net>
@@ -33,6 +33,7 @@ const struct cmd_entry *cmd_table[] = {
 	&cmd_new_window_entry,
 	&cmd_next_window_entry,
 	&cmd_previous_window_entry,
+	&cmd_set_option_entry,
 	&cmd_unbind_key_entry,
 	NULL
 };
